# counterfactual_explainers

./: .gitignore  README.md  keras_model_adult_test_cf.h5  opt-AINet_results.csv  pyproject.toml  requirements-aide.txt  requirements-dice.txt  requirements.txt
counterfactual_explainers/: calculate_metrics.py  config.toml  config_parser.py  dataset_stats.py  exp_dice.py  gen_cfs_aide.py  gen_cfs_dice.py  plot.py  plot_and_stats.py  train_models.py
counterfactual_explainers/aide/: aide_explain.py  create_db.py  predict.py  prepare_data.py  write_to_db.py
counterfactual_explainers/data/: dataset_config.toml  preprocess_data.py
counterfactual_explainers/models/: DNN_AIDE_german_credit.keras  DNN_adult.keras  DNN_compas.keras  DNN_fico.keras  DNN_german_credit.keras  RF_AIDE_german_credit.pkl  RF_adult.pkl  RF_compas.pkl  RF_german_credit.pkl  aide_dnn_adult.keras  aide_dnn_german_credit.keras  aide_rf_adult.pkl  dice_dnn_adult.keras  dice_dnn_compas.keras  dice_dnn_fico.keras  dice_rf_german_credit.pkl
counterfactual_explainers/results/: cf_aide_DNN_adult.csv  cf_aide_DNN_adult_1.csv  cf_aide_DNN_adult_decoded.csv  cf_aide_DNN_adult_metrics.csv  cf_aide_DNN_adult_metrics_2.csv  cf_aide_DNN_adult_metrics_3.csv  cf_aide_DNN_fico_21.csv  cf_aide_DNN_german_credit_metrics_2.csv  cf_aide_DNN_german_credit_query_instance.csv  cf_aide_DNN_query_instance.csv  cf_aide_dnn_adult_16.csv  cf_aide_dnn_adult_metrics.csv  cf_aide_dnn_compas.csv  (+233 more)
dissertation-report/: abdnthesis.cls  abdnthesis.tex  mybib.bib
docs/: conf.py  index.rst
project-plan/: abdn-plan.bib  abdn-plan.tex
(+46 files in other folders)
